c4prj2_input/grade.txt
Grading at Sat Oct  3 20:45:24 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:90:28: error: implicit declaration of function ‘isdigit’ [-Werror=implicit-function-declaration]
    if(line[line_ind]=='?'&&isdigit(line[line_ind+1]))
                            ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
